--- a/explorer/src/index.css
+++ b/explorer/src/index.css
@@ -22,6 +22,16 @@
     --border-table: #EAEAF3;
 
     --scrollbar: #A4A8C2;
+
+    --hover-lime20: #F3FFD2;
+
+    --button-primary-background: #C4FF1C;
+    --button-primary-text: #0D0D12;
+    --button-primary-hover: #AFED00;
+
+    --button-secondary-text: #0D0D12;
+    --button-secondary-hover: #6E7491;
+    --button-secondary-border: #DAD8EC;
   }
 }
 
